...
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_account_type"
            app:layout_constraintEnd_toStartOf="@id/tv_account_balance"
            app:layout_constraintStart_toEndOf="@id/iv_account_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="HDFC Salary Account" />

        <TextView
            android:id="@+id/tv_account_type"
...
