...
            android:id="@+id/btn_delete_holding"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:text="Delete"
            android:textColor="@color/expense_red"
            android:visibility="gone"
            tools:visibility="visible" />

        <View
            android:layout_width="0dp"
...
